--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@ if ($status == 'success') {
 } elseif ($status == 'error') {
   echo '<p>Email failed to send. Please try again.</p>';
 }
+
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+  // Get the form data
+  $pickupLocation = $_POST["pickup-location"];
+  $destination = $_POST["destination"];
+  $phoneNumber = $_POST["phone-number"];
+
+  // Set up the email
+  $to = "paichbley@gmail.com";
+  $subject = "New Booking!!";
+  $message = "Here is the booking:\n\n";
+  $message .= "Pickup Location: " . $pickupLocation . "\n";
+  $message .= "Destination: " . $destination . "\n";
+  $message .= "Phone Number: " . $phoneNumber;
+
+  // Send the email
+  $headers = "From: Your Name <your-email@example.com>"; // Replace with your email address
+  if (mail($to, $subject, $message, $headers)) {
+    // Email sent successfully
+    header("Location: index.html?status=success");
+    exit();
+  } else {
+    // Email failed to send
+    header("Location: index.html?status=error");
+    exit();
+  }
+}
 ?>
   
 <head>
@@ -95,7 +122,7 @@ if ($status == 'success') {
 
   <div class="container">
     <div class="form-container">
-      <form id="booking-form" action="send_email.php" method="POST">
+      <form id="booking-form" action="index.html" method="POST">
         <div>
           <label for="phone-number">Phone Number:</label>
           <input type="text" id="phone-number" name="phone-number" pattern="[0-9]*" required>
